--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "deletebutton",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,17 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^37.0.6",
-    "expo-font": "~8.1.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
-    "react-native-svg": "11.0.1",
-    "react-native-web": "^0.11.7"
+    "expo": "~49.0.19",
+    "expo-font": "~11.4.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "babel-preset-expo": "^8.1.0"
+    "@babel/core": "^7.20.0",
+    "babel-preset-expo": "^9.5.0"
   },
   "private": true
 }
